# oi-fifo-soroban-demos

./: .gitignore  README.md  cargo.toml
contracts/asset-controller/: Cargo.toml  README.md
contracts/asset-controller/src/: contract.rs  rules.rs  test.rs
contracts/campaign/: Cargo.toml  README.md
contracts/campaign/src/: campaign_rules.rs  contract.rs  lib.rs  storage.rs  test.rs
contracts/cash-back/: Cargo.toml
contracts/cash-back/src/: contract.rs  lib.rs  storage.rs
contracts/classic-asset-wrapper-enforced/: Cargo.toml  README.md
contracts/classic-asset-wrapper-enforced/src/: account_authorization.rs  admin.rs  asset_controller.rs  contract.rs  lib.rs  validations.rs
contracts/classic-asset-wrapper-interface/: Cargo.toml  README.md
contracts/classic-asset-wrapper-optional/: Cargo.toml  README.md
contracts/counter/: Cargo.toml
contracts/payment/: Cargo.toml
contracts/probation/: Cargo.toml  README.md
contracts/regulated-token/: Cargo.toml  asset_controller.wasm
contracts/regulated-token-controller/: Cargo.toml
contracts/standard-traits/: Cargo.toml  README.md
playground/classic-asset-wrapper/: Makefile  README.md  package.json  pnpm-lock.yaml
soroban/regulated assets/: README.md
soroban/regulated assets/regulated-asset/: Cargo.toml
soroban/regulated assets/regulated-asset/src/: allowance.rs  asset_control.rs  balance.rs  contract.rs  lib.rs  metadata.rs  storage_types.rs  test.rs  validations.rs
workflows/classic-asset-wrapper/: Makefile  README.md  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
(+120 files in other folders)
