[package]
name = "regulated-asset"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "0.9.2"
soroban-token-sdk = { version = "0.9.2" }

[dev_dependencies]
soroban-sdk = { version = "0.9.2", features = ["testutils"] }
soroban-token-sdk = { version = "0.9.2" }


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true